2011-11-10  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Use CURLOPT_MAX_RECV_SPEED_LARGE.

2011-11-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Logfile.pod: Remove match_* functions
	* perl/Amanda/Logfile.swg: Remove match_* functions
	* perl/Amanda/Util.pod: Add match_* functions
	* perl/Amanda/Util.swg: Add match_* functions
	* client-src/amdump_client.pl, perl/Amanda/DB/Catalog.pm,
	  server-src/amdumpd.pl, server-src/amidxtaped.pl,
	  server-src/amvault.pl: Use match_* functions for Amanda::Util

2011-11-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Always report the first 100 strange lines.
	* installcheck/catalogs/longstrange.cat: Fix test.

2011-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amreport.pl: Fix for perl-5.14
	* installcheck/amreport.pl: Add test.

2011-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Installcheck/Changer.pm: Fix warnign for perl 5.14.

2011-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Print state filename to debug file.

2011-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Add S3_SERVER_SIDE_ENCRYPTION property.
	* device-src/s3.c: Add server_side_encryption.
 	* device-src/s3.h: Add server_side_encryption.
	* man/xml-source/amanda-devices.7.xml: Document
	  S3_SERVER_SIDE_ENCRYPTION property

2011-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm (release): Always call finished_cb.
	* installcheck/amcheck-device.pl: Add a check.

2011-10-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c (update_info_dumper): Set date to 0 if
	  datestamp is 0.

2011-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: If datadir is not set, use the disk
	  argument.

2011-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Do not free cwd.